Initial work on reflective structures