@@ -6,6 +6,14 @@ import com.mojang.serialization.DynamicOps;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.MapLike;
 import com.mojang.serialization.RecordBuilder;
+import org.jetbrains.annotations.ApiStatus;
+import org.objectweb.asm.ClassWriter;
+import org.objectweb.asm.ConstantDynamic;
+import org.objectweb.asm.Handle;
+import org.objectweb.asm.Label;
+import org.objectweb.asm.Opcodes;
+import org.objectweb.asm.Type;
+
 import java.lang.invoke.CallSite;
 import java.lang.invoke.ConstantCallSite;
 import java.lang.invoke.MethodHandle;
@@ -16,13 +24,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
-import org.jetbrains.annotations.ApiStatus;
-import org.objectweb.asm.ClassWriter;
-import org.objectweb.asm.ConstantDynamic;
-import org.objectweb.asm.Handle;
-import org.objectweb.asm.Label;
-import org.objectweb.asm.Opcodes;
-import org.objectweb.asm.Type;
 
 @ApiStatus.Experimental
 public final class MethodHandleRecordCodecBuilder<A> {
@@ -54,7 +55,7 @@ public final class MethodHandleRecordCodecBuilder<A> {
             } else if (ctors.size() > 1) {
                 throw new IllegalArgumentException("Multiple constructors with " + fields.size() + " parameters found");
             }
-            return lookup.unreflectConstructor(ctors.get(0));
+            return lookup.unreflectConstructor(ctors.getFirst());
         });
     }
 
@@ -216,10 +217,10 @@ public final class MethodHandleRecordCodecBuilder<A> {
         }
     }
 
-    private static ConstantDynamic conDyn(String Descriptor, int i) {
+    private static ConstantDynamic conDyn(String descriptor, int i) {
         return new ConstantDynamic(
             "_",
-            Descriptor,
+            descriptor,
             new Handle(
                 Opcodes.H_INVOKESTATIC,
                 Type.getInternalName(MethodHandles.class),
